# concurrent_triangulation

./: CMakeLists.txt  README.md
inc/: ConcurrentTriangulation.h
src/: ConcurrentTriangulation.cpp  main.cpp
